--- a/cannot-resize-window/src-tauri/Cargo.toml
+++ b/cannot-resize-window/src-tauri/Cargo.toml
@@ -16,15 +16,16 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-beta", features = [ "icon-ico", "icon-png", "tray-icon"] }
-tauri-plugin-dialog = "2.0.0-beta.1"
-tauri-plugin-shell = "2.0.0-beta.1"
-tauri-plugin-process = "2.0.0-beta.1"
-tauri-plugin-http = "2.0.0-beta.1"
-tauri-plugin-os = "2.0.0-beta.1"
-tauri-plugin-notification = "2.0.0-beta.1"
-tauri-plugin-clipboard-manager = "2.0.0-beta.1"
-tauri-plugin-fs = "2.0.0-beta.1"
+tauri = { version = "2.0.0-beta", features = [ "tray-icon"] }
+tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-http = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
+tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 
 [features]
 # by default Tauri runs in production mode
