--- a/window-loses-its-shadow/src-tauri/Cargo.toml
+++ b/window-loses-its-shadow/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "loses-focus-when-moving-the-window"
+name = "window-loses-its-shadow"
 version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
@@ -16,7 +16,7 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
+tauri = { version = "2.0.0-beta", features = [ "tray-icon" ] }
 tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
 tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
