--- a/window-loses-its-shadow/package.json
+++ b/window-loses-its-shadow/package.json
@@ -10,12 +10,21 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "2.0.0-beta.9",
+    "@tauri-apps/api": "2.0.0-beta.3",
+    "@tauri-apps/plugin-clipboard-manager": "2.0.0-beta.1",
+    "@tauri-apps/plugin-dialog": "2.0.0-beta.1",
+    "@tauri-apps/plugin-fs": "2.0.0-beta.1",
+    "@tauri-apps/plugin-global-shortcut": "2.0.0-beta.1",
+    "@tauri-apps/plugin-http": "2.0.0-beta.1",
+    "@tauri-apps/plugin-notification": "2.0.0-beta.1",
+    "@tauri-apps/plugin-os": "2.0.0-beta.1",
+    "@tauri-apps/plugin-process": "2.0.0-beta.1",
+    "@tauri-apps/plugin-shell": "2.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "2.0.0-beta.13",
+    "@tauri-apps/cli": "2.0.0-beta.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
